syntax = "proto3";

package grocer;

option go_package = "./proto;grocer";

service Grocer {
	rpc Call(Request) returns (Response) {} 
	rpc GetGroceryList(Request) returns (Response) {} 
	rpc Greetings(Request) returns (Response) {} 
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}

message Request {
	string name = 1;
	string greetings = 2;
	string address = 3;
	 
}
 

message Response {
	string msg = 1;
	int64 code =2;
}


message GreetingStaff {
	string msg = 1;
}


message GetGroceryList {
	string json = 1; 
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
